Fixing firefox alignment issues

--- a/dev/styles/ui/_off-canvas.scss
+++ b/dev/styles/ui/_off-canvas.scss
@@ -181,6 +181,7 @@ body {
 }
 
 .js .nav li .dropdown { 	
+	position: absolute;
 	border: 0 !important;
 	clip: rect(0 0 0 0) !important;
 	height: 0px !important;
@@ -202,7 +203,7 @@ body {
 	clip: auto !important;
 	height: auto !important; 
 	padding: 30px;
-	margin: 0 auto;
+	//margin: 0 auto;
 	width: 100% !important;
 	position: fixed;
 	left: 0;
